--- a/pm-app/package.json
+++ b/pm-app/package.json
@@ -12,7 +12,8 @@
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-jsx": "^2.2.7"
   },
   "scripts": {
     "start": "react-app-rewired start",
