--- a/pm-app/package.json
+++ b/pm-app/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.8.0",
     "lodash": "^4.17.10",
+    "mobile-drag-drop": "^2.3.0-rc.1",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-app-rewired": "^1.5.2",
