--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.6",
