--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "log4js": "^3.0.5",
     "mongoose": "^5.1.6",
     "q": "^1.5.1"
   }
