--- a/pm-app/package.json
+++ b/pm-app/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "1.1.4",
     "styled-jsx": "^2.2.7"
   },
-  "homepage": "https://evschen.github.io/public",
+  "homepage": "https://evschen.github.io/pm-app",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
